<resources>
    <string name="app_name">CryptoBookLite</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New</string>

<!--title activity-->
    <string name="title_activity_addeditpass">Edit password</string>
    <string name="title_activity_addeditimg">Edit document</string>
    <string name="title_activity_addeditnote">Edit note</string>
    <string name="title_activity_info">Summary information</string>
    <string name="title_activity_img">Documents</string>
    <string name="title_activity_change_app_pswd">Change app\'s password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_pass">Passwords</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_back">Back</string>
    <string name="action_swipe_delete">DELETE</string>
    <string name="action_swipe_archive">ARCHIVE</string>
    <string name="action_swipe_export">EXPORT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!--строки для бокового меню-->
    <string name="main_navigation_drawer_menu_password">Passwords</string>
    <string name="main_navigation_drawer_menu_images">Scan/photo</string>
    <string name="main_navigation_drawer_menu_notes">Notes</string>
    <string name="main_navigation_drawer_menu_settings">Settings</string>
    <string name="main_navigation_drawer_menu_info">Information</string>
    <string name="main_navigation_drawer_menu_about">About</string>

<!--наименования labels-->
    <string name="label_name">Name</string>
    <string name="label_create_date">Created</string>
    <string name="label_change_date">Changed</string>
    <string name="label_show_pass">Show password</string>
    <string name="label_encode">Encode</string>
    <string name="label_count_of_passwords">Number of passwords</string>
    <string name="label_count_of_passwords_does_not_encode">Of which are unencrypted</string>
    <string name="label_count_of_images">Count of documents</string>
    <string name="label_count_of_images_does_not_encode">Of which are unencrypted</string>
    <string name="label_count_of_notes">Count of notes</string>
    <string name="label_count_of_notes_does_not_encode">Of which are unencrypted</string>
    <string name="label_length_of_generate_password">Length of generate password - </string>
    <string name="label_volume_data">Volume data</string>
    <string name="label_list_of_files">List of files</string>
    <string name="label_comments">Comments</string>
    <string name="label_Login">Login</string>
    <string name="label_password">Password</string>

<!--Hints для элементов-->
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login</string>
    <string name="hint_comment">Comments</string>
    <string name="hint_full_file_name">Full name file</string>
    <string name="hint_enter_old_password">Enter old password</string>
    <string name="hint_enter_new_password">Enter new password</string>
    <string name="hint_accept_new_password">Confirm new password</string>
    <string name="hint_enter_password">Enter password</string>

<!--Нименования управляющих элементов-->
    <string name="control_save">Save</string>
    <string name="control_delete">Delete</string>
    <string name="control_cancel">Cancel</string>
    <string name="control_encode">Encode</string>
    <string name="control_create_backup">Create backup</string>
    <string name="control_restore_backup">Restore                 ...</string>
    <string name="control_change_password">Change password                ...</string>
    <string name="control_create">New password</string>
    <string name="control_ok">OK</string>
    <string name="control_generate_password">Generate password</string>
    <string name="control_show_password">Show password</string>
    <string name="control_show_passwords">Show passwords</string>
    <string name="control_edit_in_window">Edit items in window</string>
    <string name="control_delete_unused_files">Delete unused files</string>
    <string name="control_show">Show</string>
    <string name="control_yes">Yes</string>
    <string name="control_no">No</string>
    <string name="control_export">Export</string>

    <string name="title_activity_preview_image">Preview</string>
    <string name="dummy_button">Back</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="version_info">Version Lite: </string>

    <!--Строковые параметры для Activity Camera-->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>

    <string name="info_message">
        <![CDATA[


            \t\tThis application save passwords and its information.
            Lite version saves only 10 passwords. For more download full version app.
            The app does not have network tools. It does not send information to network, cloud and any open network services.\n
            \t\tAll data endocde with AES 265 default.
            You may to create backup or restore data using your password.
            Your data under reliable protected!\n


        ]]>
    </string>

    <string name="about_message">
        <![CDATA[
            CryptoBook\n
            Shinkaryuk Valerii\n
            2017\n\n

            \t\tThis application save passwords and its information.
            Lite version save only 10 passwords. For more download full version app.
            The app does not have network tools. It does not send information to network, to cloud and to any open network services.\n
            \t\tAll data encode with AES 265 default.
            You may to create backup or restore data using your password.
            Your data under reliable protected!\n\n

        ]]>
    </string>

    <!--Наименования пунктов контекстного меню-->
    <string name="favOn">Add to favorites</string>
    <string name="favOff">Delete from favorites</string>
    <string name="cryptoOn">Encode</string>
    <string name="cryptoOff">Do not encode</string>
    <string name="search">Search</string>

<!--Alerts strings-->
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_delete">Delete!</string>
    <string name="alert_do_delete">Delete </string>
    <string name="alert_record_deleted">Item deleted!</string>
    <string name="alert_restore_backup">This backup was probably encrypted with different password! But I wiil try…</string>
    <string name="alert_restore_title">Restore backup</string>



<!--Сообщения для Toast и Snackbar-->
    <string name="message_file_not_found">File not found!</string>
    <string name="message_item_save1">Item </string>
    <string name="message_item_save2"> saved!</string>
    <string name="message_enter_password">Enter password</string>
    <string name="message_goodbuy">Adios!</string>
    <string name="message_invalid_password">Invalid password!</string>
    <string name="message_saved">Saved: </string>
    <string name="message_unknown_error">Unknown error!</string>
    <string name="message_password_changed_successfully">Password changed successfully!</string>
    <string name="message_database_encryption_error">Database encryption error!</string>
    <string name="message_not_confirm_new_password">You did not confirm the new password</string>
    <string name="message_invalid_old_password">Invalid old password</string>
    <string name="message_delete_error">Delete error!</string>
    <string name="message_total_app_files_size">Total application file storage size</string>
    <string name="message_restore_backup_successfully1">Restore backup </string>
    <string name="message_restore_backup_successfully2"> successfully</string>
    <string name="message_file_create_successfully1">File </string>
    <string name="message_file_create_successfully2"> create successfully</string>
    <string name="message_record_encrypted">The record is encrypted</string>
    <string name="message_record_decrypted">Warning! The record is decrypted.</string>
    <string name="message_record_add_fav">The record added to favorites</string>
    <string name="message_record_del_fav">The record deleted from favorites</string>
    <string name="message_item_save">Item saved</string>
    <string name="message_item_not_save">Item not saved</string>
    <string name="message_create_new_item">Create new item</string>
    <string name="message_change_password">Before changing your password, we recommend back up. Please note that data recovery from a backup is possible only with the password with which the backup was performed.</string>
    <string name="message_if_forgot_pass">Warning!!! If you will forgot your password of this application, then you will cannot restore data.</string>
    <string name="message_if_successfully_pass">Successfully!</string>
    <string name="message_lite_version">Download full version to add a new password!</string>
    <string name="message_not_possible_restore_backup">The backup was encoded with another password, the restore is not possible! Change the password and try again.</string>
    <string name="message_permissions_not_granted">Permission for read and write data to file system not granted!</string>

    <!--Наименования пунктов menu_main-->
    <string name="favorites_menu_main">Favorites</string>
    <string name="search_menu_main">Search</string>
    <string name="refresh_menu_main">Refresh</string>
</resources>
