<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.shinkaryuk.passbook.addEditPass">
    <item
        android:id="@+id/menuDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuCancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuSave"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="always"
        android:icon="@mipmap/ic_save_white_24dp"/>
</menu>