<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/сolorBackgroundBlack"
    android:theme="@style/AppDarkTheme.NoActionBar"
    tools:context="com.example.shinkaryuk.passbook.changeMainPasswd">

    <EditText
        android:id="@+id/etOldPasswd"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_enter_old_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewPasswd"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hint_enter_new_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOldPasswd" />

    <EditText
        android:id="@+id/etConfirmNewPasswd"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_accept_new_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPasswd" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btnCancelNewPasswd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelChangeMainPasswd"
            android:text="@string/control_cancel"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/dtnOkNewPasswd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="okChangeMainPasswd"
            android:text="@string/control_ok"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbShowPswds"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/control_show_passwords"
        android:textColor="@color/сolorTextBlack"
        android:textColorHighlight="@android:color/background_light"
        android:theme="@style/MyCheckBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmNewPasswd" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="185dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbShowPswds" />

</android.support.constraint.ConstraintLayout>
