<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/сolorBackgroundBlack"
    android:theme="@style/AppDarkTheme.NoActionBar"
    tools:context="com.shinkaryuk.passbook.addEditPass"
    tools:layout_editor_absoluteY="81dp">

    <CheckBox
        android:id="@+id/cb_IsCryptPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/control_encode"
        android:textColor="@android:color/white"
        android:theme="@style/MyCheckBox"
        app:layout_constraintBottom_toTopOf="@id/divider6"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/addEditPassToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppDarkTheme.PopupOverlay"
        app:title="@string/title_activity_addeditpass"
        app:titleTextColor="@color/сolorTextBlack">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etNamePass"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditPassToolbar" />

    <EditText
        android:id="@+id/etCommentPass"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_comment"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintBottom_toTopOf="@+id/cb_IsCryptPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_ShowPasswd" />

    <EditText
        android:id="@+id/etLoginPass"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_login"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNamePass" />

    <EditText
        android:id="@+id/etPassPass"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintEnd_toStartOf="@+id/cb_ShowPasswd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPass" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="okEdit"
        android:text="@string/control_save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="cancelEdit"
        android:text="@string/control_cancel"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="deleteEdit"
        android:text="@string/control_delete"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cb_ShowPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        android:theme="@style/MyCheckBox"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPass" />

    <TextView
        android:id="@+id/tvDateCreateNote"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:text="tvDateCreate"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/addEditPassToolbar" />

    <TextView
        android:id="@+id/tvDateChange"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:text="tvDateChange"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditPassToolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/label_create_date"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditPassToolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:text="@string/label_change_date"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvDateChange"
        app:layout_constraintTop_toBottomOf="@+id/addEditPassToolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPass"
        app:srcCompat="@mipmap/eye_open_1" />

    <Button
        android:id="@+id/btGenPass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickGenPass"
        android:text="@string/control_generate_password"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/divider6"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:background="@color/сolorPrimaryDarkBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateCreateNote" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="8dp"
        android:background="@color/сolorPrimaryDarkBlack"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
