<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/сolorBackgroundBlack"
    android:theme="@style/AppDarkTheme.NoActionBar"
    tools:context="com.example.shinkaryuk.passbook.addEditPass"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorButtonNormal"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_IsCryptNotes" />

    <CheckBox
        android:id="@+id/cb_IsCryptNotes"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/control_encode"
        android:textColor="@android:color/white"
        android:theme="@style/MyCheckBox"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNotesNote" />

    <TextView
        android:id="@+id/tvDateCreateNote"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:text="tvDateCreate"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/addEditNotesToolbar" />

    <TextView
        android:id="@+id/tvDateChangeNote"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:text="tvDateChange"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditNotesToolbar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/addEditNotesToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppDarkTheme.PopupOverlay"
        app:title="@string/title_activity_addeditnote"
        app:titleTextColor="@color/сolorTextBlack">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etNotesNote"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_comment"
        android:inputType="textCapSentences|textMultiLine"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textColorHint="@color/сolorTextBlack"
        app:layout_constraintBottom_toTopOf="@+id/cb_IsCryptNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateCreateNote" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="okEdit"
        android:text="@string/control_save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="cancelEdit"
        android:text="@string/control_cancel"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="deleteEdit"
        android:text="@string/control_delete"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/label_create_date"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditNotesToolbar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="19dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:text="@string/label_change_date"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvDateChangeNote"
        app:layout_constraintTop_toBottomOf="@+id/addEditNotesToolbar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorButtonNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateCreateNote" />

</android.support.constraint.ConstraintLayout>
